# dataDoctor

./: .env  .gitignore  Cli.py  Dockerfile  LICENSE  README.md  api.py  app.py  check_config.py  datadoctor_dna.db  datadoctor_memory.db  datadoctor_saved_queries.json  mydata.db  pyproject.toml  reproduce_bug.py  requirements.txt  requirements.txt.txt  run_app.bat  run_app.ps1  test.db  test_pandas.py
.github/: ci.yml
.streamlit/: config.toml
examples/: dataDoctor_big_dataset_report.html  sample_sales_cleaned.csv  sample_sales_engineered.csv  sample_sales_pipeline.py  sample_sales_ready.csv  sample_sales_report.html
examples - Copy/: Teen_Mental_Health_Dataset_engineered.csv  dataDoctor_big_dataset.csv  sample_churn.csv  sample_sales.csv
reports/: dataDoctor_big_dataset_quality.docx  sample_sales_quality.docx  sample_sales_quality.pptx
src/: __init__.py  auth.py  report.py  security.py  smart_report.py  ux.py
src/core/: agent.py  human_analyst.py
src/data/: advanced_automl.py  advanced_imputer.py  advanced_outlier.py  advanced_stats.py  ai_suggestions.py  analyzer.py  audit_trail.py  auto_ml.py  auto_repair.py  cleaner.py  cognitive_dna.py  contracts.py  correlation_network.py  data_chat.py  db_connector.py  db_converter.py  db_query.py  dna_memory.py  drift.py  encoding_advisor.py  feature_engineer.py  feature_importance.py  imbalance_detector.py  loader.py  memory.py  ml_readiness.py  pipeline_export.py  preparator.py  quality_score.py  relationships.py  reliability.py  schema_validator.py  split_advisor.py  target_detector.py
tests/: test_advanced_imputation.py  test_contracts_repairs.py  test_datadoctor.py  test_reliability.py
